@@ -1,46 +1,0 @@
-@-moz-document domain(gamefaqs.com)
-{
-    #gamefox-quickpost-title, #gamefox-quickpost-form
-    {
-        text-align: center;
-        width: 100%;
-        clear: both;
-    }
-
-    #gamefox-quickpost-title
-    {
-        background-color: #6564ff;
-        color: #fff;
-        font: bold 16px verdana, sans-serif;
-    }
-    #gamefox-quickpost-afloat
-    {
-        position: fixed;
-        top: 30%;
-        left: 20%;
-        width: 70%;
-        z-index: 3;
-        display: none;
-        border: 2px solid #6564ff;
-        color: #000;
-        background-color: #dfdfdf;
-        -moz-border-radius: 10px;
-        -moz-opacity: 0.9;
-    }
-    #gamefox-quickpost-afloat > #gamefox-quickpost-title
-    {
-        -moz-border-radius: 10px 10px 0 0;
-        -moz-opacity: 0.9;
-    }
-    #gamefox-message, #gamefox-topic
-    {
-        width: 70%;
-        border-left: 2px solid #6564ff;
-        border-right: 2px solid #6564ff;
-    }
-
-    textarea#gamefox-message
-    {
-        font-size: 12px;
-    }
-}
