@@ -3,6 +3,7 @@
     * Option to remove preview and reset buttons for QuickPost
     * Label posts from the topic creator
     * Better ad blocking, similar to Adblock Plus
+    * Remove CSS: QuickPost (0.5)
 
 2008-09-21:
     * version 0.6.6
